--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 소소한 일상 꿀팁을 기록하는 블로그   
+title: 양마의 소소한 일상 블로그   
 email: yangjs89@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Themed by ejjoo
+  소소한 일상 꿀팁을 기록하는 블로그  
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "yangji89.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: yangji
