--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,14 @@ plugins:
 category_dir: category/
 tag_dir: tag/
 
-disqus: 
-  # comments: true
-  shortname: yangji-1
-comments: true
+comments:
+  // default가 false로 설정되어있을 수 있습니다.
+  // disqus로 바꿔주세요.
+  provider: disqus
+  ...
+disqus:
+  // infiduk 부분에 본인의 것을 쓰시면 됩니다.
+  shortname: https-yangji89-github-io
 
 
 # Exclude from processing.
