--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,8 @@ comments:
   ...
 disqus:
   // infiduk 부분에 본인의 것을 쓰시면 됩니다.
-  shortname: https-yangji89-github-io
+  # shortname: https-yangji89-github-io
+  shortname: yangji-1
 
 
 # Exclude from processing.
