--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ plugins:
 category_dir: category/
 tag_dir: tag/
 
-comments:
+comments: true
   // default가 false로 설정되어있을 수 있습니다.
   // disqus로 바꿔주세요.
   provider: disqus
